--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ text-decoration: none;
 }
 
 .frosted {
- background-image: url(http://bit.ly/2gPLxZ4); //add "" if you want
+ background-image: url(jpn.jpg); //url(http://bit.ly/2gPLxZ4)
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
@@ -245,5 +245,5 @@ text-decoration: none;
  top: -25px;   //giving minus -25px top position
  bottom: 0;
  box-shadow: inset 0 0 0 200px rgba(255,255,255,0.3);
- filter: blur(5px);
+ filter: blur(10px);
 }
