--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   padding: 10px;
   border-radius: 7px;
   opacity: .6;
-  text-decoration: none;
+  text-decoration: none;//fdf
   font-weight: lighter;
 }
 
